feat(filter/sort): sort geofence list by home agency synergy identifier and by radius #syn-4761
